crates/au-cli/tests/it/snapshots/it__scenarios__fence-prose-at-record-slot.snap
---
source: crates/au-cli/tests/it/scenarios.rs
expression: rendered
---
{
  "diagnostics": [
    {
      "code": "body-slot-shape-mismatch",
      "fix": {
        "description": "write the fence as a YAML record with a `type:`, or change the slot to `String` for prose"
      },
      "message": "marked fence for 'origin' does not fill record slot 'point' — the content is not a record (needs a `type:` and fields)",
      "severity": "error",
      "span": {
        "file": "<root>/scenarios/fence-prose-at-record-slot/note.md",
        "line_col": {
          "end": {
            "col": 1,
            "line": 9
          },
          "start": {
            "col": 1,
            "line": 6
          }
        },
        "range": {
          "end": 90,
          "start": 31
        }
      }
    }
  ],
  "instances": {
    "aborted_at_load": false,
    "count": 2,
    "entries": [
      {
        "body_events": null,
        "claim": [
          "au.engine.repo::au-engine"
        ],
        "closure": [
          "au.engine.repo::au-engine"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "deps",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "au.engine.dep::au-engine[]"
              }
            ],
            "required": false,
            "shape": "au.engine.dep::au-engine[]"
          },
          {
            "divergent": false,
            "field": "description",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "name",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "remote",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 32,
                        "line_col": {
                          "end": {
                            "col": 33,
                            "line": 1
                          },
                          "start": {
                            "col": 7,
                            "line": 1
                          }
                        },
                        "start": 6
                      },
                      "file": "<root>/scenarios/fence-prose-at-record-slot/.arsumbris/repo.yaml"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "fence-prose-at-record-slot"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "fence-prose-at-record-slot"
                }
              }
            ],
            "field": "name"
          }
        ],
        "file": "<root>/scenarios/fence-prose-at-record-slot/.arsumbris/repo.yaml",
        "section_presence": null
      },
      {
        "body_events": [
          {
            "body": "just prose, and the slot demands a record\n",
            "info": "[:origin]",
            "kind": "fenced_block",
            "span": {
              "end": 90,
              "line_col": {
                "end": {
                  "col": 1,
                  "line": 9
                },
                "start": {
                  "col": 1,
                  "line": 6
                }
              },
              "start": 31
            }
          }
        ],
        "claim": [
          "capture"
        ],
        "closure": [
          "capture"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "origin",
            "origins": [
              {
                "name": "capture",
                "origin_path": "<root>/scenarios/fence-prose-at-record-slot/type/capture.type.yaml",
                "required": true,
                "shape": "point"
              }
            ],
            "required": true,
            "shape": "point"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 90,
                        "line_col": {
                          "end": {
                            "col": 1,
                            "line": 9
                          },
                          "start": {
                            "col": 1,
                            "line": 6
                          }
                        },
                        "start": 31
                      },
                      "file": "<root>/scenarios/fence-prose-at-record-slot/note.md"
                    },
                    "section_path": [],
                    "surface": "body_fence",
                    "value": {
                      "fields": [],
                      "kind": "inline_record"
                    }
                  }
                ],
                "value": {
                  "fields": [],
                  "kind": "inline_record"
                }
              }
            ],
            "field": "origin"
          }
        ],
        "file": "<root>/scenarios/fence-prose-at-record-slot/note.md",
        "section_presence": null
      }
    ]
  }
}
